Link to proper demo URLs

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CSS Graphs by Bradley Taunt</title>
     <!-- Demo Page Styles -->
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/bradleytaunt/cssgraphs/master/style.css">
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/bradleytaunt/cssgraphs/master/cssgraph_bar.css">
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/bradleytaunt/cssgraphs/master/cssgraph_plot.css">
+    <link rel="stylesheet" href="https://bradleytaunt.com/cssgraphs-demo/style.css">
+    <link rel="stylesheet" href="https://bradleytaunt.com/cssgraphs-demo/cssgraph_bar.css">
+    <link rel="stylesheet" href="https://bradleytaunt.com/cssgraphs-demo/cssgraph_plot.css">
 </head>
 <body>
 
