Fix demo URL annoying bug

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>CSS Graphs by Bradley Taunt</title>
     <!-- Demo Page Styles -->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://bradleytaunt.com/css/cssgraph_bar.css">
+    <link rel="stylesheet" href="https://bradleytaunt.com/css/cssgraph_plot.css">
 </head>
 <body>
 
