Update demo typeface and include demo link in README

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="favicon.png" type="image/png">
     <title>CSS Graphs by Bradley Taunt</title>
     <!-- Demo Page Styles -->
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://bradleytaunt.com/css/cssgraph_bar.css">
-    <link rel="stylesheet" href="https://bradleytaunt.com/css/cssgraph_plot.css">
+    <link rel="stylesheet" href="cssgraph_bar.css">
+    <link rel="stylesheet" href="cssgraph_plot.css">
 </head>
 <body>
 
@@ -16,7 +17,9 @@
         <h1>CSS Graphs</h1>
         <p>A collection of pure CSS graphs with a graceful mobile fallback.</p>
         <p>Inspired by the data design concepts advocated by Edward Tufte.</p>
-        <p>Open source and 100% customizable. Check it out on <a href="">Github</a>.</p>
+        <p>Open source and 100% customizable.</p>
+        <br>
+        <p>Check it out on <a href="">Github</a>.</p>
     </div>
 
     <!-- Bar Graph -->
@@ -97,6 +100,10 @@
     </div>
     <!-- END Plot Graph -->
     <hr>
+
+    <footer>
+        <p>An open source project by <a href="https://bradleytaunt.com">Bradley Taunt</a></p>
+    </footer>
 
 </body>
 </html>
