Switch to Netlify

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>Inspired by the data design concepts advocated by Edward Tufte.</p>
         <p>Open source and 100% customizable.</p>
         <br>
-        <p>Check it out on <a href="">Github</a>.</p>
+        <p>Check it out on <a href="https://github.com/bradleytaunt/cssgraphs">Github</a>.</p>
     </div>
 
     <!-- Bar Graph -->
